package org.totalgrid.reef.metrics.client.proto.Metrics;


option java_package = "org.totalgrid.reef.metrics.client.proto";
option java_outer_classname = "Metrics";

/*
message Sample {
  optional string test = 1;
}*/

message MetricsValue {
  optional string name = 1;
  optional double value = 2;
}

message MetricsRead {
  repeated string           filters = 1;
  repeated MetricsValue     results = 2;
  optional uint64           read_time = 3;
}

